cmake_minimum_required(VERSION 3.27)
project(algorithm)

set(CMAKE_CXX_STANDARD 26)

add_executable(algorithm main.cpp
        oj/leetcode/1101-1200/1157/1157_1.cpp
        oj/leetcode/1101-1200/1157/1157_2.cpp
        oj/leetcode/301-400/303/303.cpp
        oj/leetcode/1-100/1/1.cpp
        oj/leetcode/1-100/2/2.cpp
        oj/leetcode/1-100/3/3.cpp
        oj/leetcode/1901-2000/1969/1969.cpp
        oj/leetcode/1601-1700/1669/1669.cpp
        oj/leetcode/2601-2700/2671/2671.cpp
        oj/leetcode/201-300/206/206.cpp
        oj/leetcode/601-700/699/699_1.cpp
        oj/leetcode/601-700/699/699_2.cpp
        oj/leetcode/2501-2600/2549/2549.cpp
        oj/leetcode/101-200/143/143_1.cpp
        oj/leetcode/101-200/143/143_2.cpp
        oj/leetcode/2401-2500/2407/2407.cpp
        oj/leetcode/201-300/287/287.cpp
        oj/leetcode/301-400/322/322.cpp
        oj/leetcode/501-600/518/518.cpp
        oj/leetcode/3001-3100/3090/3090.cpp
        oj/leetcode/3001-3100/3091/3091.cpp
        oj/leetcode/3001-3100/3092/3092.cpp
        oj/leetcode/3001-3100/3093/3093.cpp
        oj/leetcode/401-500/442/442.cpp
        oj/leetcode/2501-2600/2569/2569.cpp
        oj/leetcode/3001-3100/3072/3072.cpp
        oj/leetcode/1-100/41/41.cpp
        oj/leetcode/2601-2700/2642/2642_1.cpp
        oj/leetcode/2601-2700/2642/2642_2.cpp
        oj/leetcode/2901-3000/2916/2916.cpp
        oj/leetcode/2501-2600/2580/2580.cpp
        oj/leetcode/701-800/713/713.cpp
        oj/leetcode/2901-3000/2958/2958.cpp
        oj/leetcode/1901-2000/1997/1997.cpp
        oj/leetcode/2901-3000/2908/2908.cpp
        oj/leetcode/2901-3000/2962/2962.cpp
        oj/leetcode/2901-3000/2977/2977.cpp
        oj/leetcode/3001-3100/3083/3083.cpp
        oj/leetcode/2201-2300/2286/2286.cpp
        oj/leetcode/2901-3000/2952/2952.cpp
        oj/leetcode/901-1000/992/992.cpp
        oj/leetcode/301-400/331/331.cpp
        oj/leetcode/3001-3100/3099/3099.cpp
        oj/leetcode/3001-3100/3100/3100.cpp
        oj/leetcode/3101-3200/3101/3101.cpp
        oj/leetcode/2801-2900/2810/2810.cpp
        oj/leetcode/1-100/58/58.cpp
        oj/leetcode/2401-2500/2444/2444_1.cpp
        oj/leetcode/2401-2500/2444/2444_2.cpp
        oj/leetcode/2601-2700/2617/2617.cpp
        oj/leetcode/3001-3100/3077/3077.cpp
        oj/leetcode/3001-3100/3041/3041.cpp
        oj/leetcode/201-300/205/205.cpp
        oj/leetcode/801-900/894/894.cpp
        oj/leetcode/3001-3100/3082/3082_1.cpp
        oj/leetcode/3001-3100/3082/3082_2.cpp
        oj/leetcode/1301-1400/1379/1379.cpp
        oj/leetcode/1-100/79/79.cpp
        oj/leetcode/3001-3100/3098/3098_1.cpp
        oj/leetcode/1601-1700/1614/1614.cpp
        oj/leetcode/2101-2200/2192/2192.cpp
        oj/leetcode/2901-3000/2930/2930.cpp
        oj/leetcode/3001-3100/3098/3098_2.cpp
        oj/leetcode/1001-1100/1026/1026.cpp
        oj/leetcode/1501-1600/1544/1544.cpp
        oj/leetcode/2901-3000/2954/2954.cpp
        oj/leetcode/1201-1300/1249/1249.cpp
        oj/leetcode/1401-1500/1483/1483.cpp
        oj/leetcode/1501-1600/1600/1600.cpp
        oj/leetcode/601-700/678/678.cpp
        oj/leetcode/3001-3100/3042/3042_1.cpp
        oj/leetcode/3101-3200/3105/3105.cpp
        oj/leetcode/3101-3200/3106/3106.cpp
        oj/leetcode/3101-3200/3107/3107.cpp
        oj/leetcode/3101-3200/3108/3108.cpp
        oj/leetcode/401-500/462/462.cpp
        oj/leetcode/3001-3100/3042/3042_2.cpp
        oj/leetcode/1601-1700/1700/1700_1.cpp
        oj/leetcode/1601-1700/1700/1700_2.cpp
        oj/leetcode/2001-2100/2009/2009.cpp
        oj/leetcode/2401-2500/2448/2448.cpp
        oj/leetcode/2201-2300/2276/2276.cpp
        oj/leetcode/2501-2600/2563/2563.cpp
        oj/leetcode/2501-2600/2529/2529.cpp
        oj/leetcode/2001-2100/2073/2073.cpp
        oj/leetcode/1701-1800/1703/1703.cpp
        oj/leetcode/1701-1800/1702/1702.cpp
        oj/leetcode/901-1000/950/950.cpp
        oj/leetcode/401-500/402/402.cpp
        oj/leetcode/1701-1800/1766/1766_1.cpp
        oj/leetcode/1701-1800/1766/1766_2.cpp
        oj/leetcode/1401-1500/1478/1478.cpp
        oj/leetcode/2901-3000/2923/2923.cpp
        oj/leetcode/1-100/42/42.cpp
        oj/leetcode/2901-3000/2968/2968_1.cpp
        oj/leetcode/2901-3000/2968/2968_2.cpp
        oj/leetcode/2901-3000/2924/2924_1.cpp
        oj/leetcode/2901-3000/2924/2924_2.cpp
        oj/leetcode/1-100/85/85_1.cpp
        oj/leetcode/1-100/85/82_2.cpp
        oj/leetcode/2901-3000/2967/2967_1.cpp
        oj/leetcode/2901-3000/2967/2967_2.cpp
        oj/leetcode/1601-1700/1685/1685.cpp
        oj/leetcode/3101-3200/3110/3110.cpp
        oj/leetcode/3101-3200/3111/3111.cpp
        oj/leetcode/3101-3200/3112/3112.cpp
        oj/leetcode/3101-3200/3113/3113_1.cpp
        oj/leetcode/3101-3200/3113/3113_2.cpp
        oj/leetcode/3101-3200/3114/3114.cpp
        oj/leetcode/3101-3200/3115/3115.cpp
        oj/leetcode/3101-3200/3116/3116_1.cpp
        oj/leetcode/3101-3200/3116/3116_2.cpp
        oj/leetcode/701-800/705/705.cpp
        oj/leetcode/401-500/404/404.cpp
        oj/leetcode/701-800/706/706.cpp
        oj/leetcode/101-200/129/129.cpp
        oj/leetcode/2101-2200/2121/2121.cpp
        oj/leetcode/3101-3200/3117/3117_1.cpp
        oj/leetcode/3001-3100/3097/3097_1.cpp
        oj/leetcode/3001-3100/3097/3087_2.cpp
        oj/leetcode/3101-3200/3117/3117_2.cpp
        oj/leetcode/901-1000/924/924.cpp
        oj/leetcode/601-700/623/623.cpp
        oj/leetcode/2601-2700/2615/2615.cpp
        oj/leetcode/901-1000/988/988.cpp
        oj/leetcode/901-1000/928/928.cpp
        oj/leetcode/2001-2100/2007/2007.cpp
        oj/leetcode/401-500/463/463.cpp
        oj/leetcode/1101-1200/1131/1131.cpp
        oj/leetcode/101-200/200/200.cpp
        oj/leetcode/1801-1900/1883/1883.cpp
        oj/leetcode/3101-3200/3102/3102_1.cpp
        oj/leetcode/1-100/39/39.cpp
        oj/leetcode/1901-2000/1992/1992.cpp
        oj/leetcode/201-300/204/204.cpp
        oj/leetcode/3101-3200/3102/3102_2.cpp
        oj/leetcode/1-100/28/28.cpp
        oj/leetcode/1901-2000/1971/1971.cpp
        oj/leetcode/201-300/216/216.cpp
        oj/leetcode/2501-2600/2584/2584.cpp
        oj/leetcode/3101-3200/3120/3120.cpp
        oj/leetcode/3101-3200/3121/3121.cpp
        oj/leetcode/3101-3200/3123/3123.cpp
        oj/leetcode/3101-3200/3122/3122.cpp
        oj/leetcode/1301-1400/1392/1392.cpp
        oj/leetcode/301-400/377/377.cpp
        oj/leetcode/701-800/752/752.cpp
        oj/leetcode/901-1000/952/952.cpp
        oj/leetcode/301-400/310/310.cpp
        oj/leetcode/1001-1100/1052/1052.cpp
        oj/leetcode/1601-1700/1627/1627.cpp
        oj/leetcode/2301-2400/2385/2385.cpp
        oj/leetcode/1101-1200/1137/1137_1.cpp
        oj/leetcode/1101-1200/1137/1137_2.cpp
        oj/leetcode/1901-2000/1998/1998.cpp
        oj/leetcode/2701-2800/2739/2739_1.cpp
        oj/leetcode/2701-2800/2739/2739_2.cpp
        oj/leetcode/1501-1600/1518/1518_1.cpp
        oj/leetcode/1501-1600/1518/1518_2.cpp
        oj/leetcode/2301-2400/2370/2370.cpp
        oj/leetcode/2701-2800/2709/2709.cpp
        oj/leetcode/1201-1300/1289/1289.cpp
        oj/leetcode/2601-2700/2639/2639.cpp
        oj/leetcode/501-600/514/514_1.cpp
        oj/leetcode/501-600/514/514_2.cpp
        oj/leetcode/701-800/743/743.cpp
        oj/leetcode/801-900/834/834.cpp
        oj/leetcode/1001-1100/1017/1017.cpp
        oj/leetcode/3101-3200/3127/3127.cpp
        oj/leetcode/3101-3200/3128/3128.cpp
        oj/leetcode/3101-3200/3129/3129_1.cpp
        oj/leetcode/3101-3200/3129/3129_2.cpp
        oj/leetcode/3101-3200/3131/3131.cpp
        oj/leetcode/3101-3200/3132/3132.cpp
        oj/leetcode/3101-3200/3133/3133.cpp
        oj/leetcode/701-800/778/778.cpp
        oj/leetcode/3101-3200/3134/3134.cpp
        oj/leetcode/1301-1400/1329/1329.cpp
        oj/leetcode/2901-3000/2997/2997.cpp
        oj/leetcode/2701-2800/2798/2798.cpp
        oj/leetcode/1901-2000/1915/1915.cpp
        oj/leetcode/701-800/787/787.cpp
        oj/leetcode/801-900/882/882.cpp
        oj/leetcode/1901-2000/2000/2000.cpp
        oj/leetcode/2401-2500/2462/2462.cpp
        oj/leetcode/1301-1400/1368/1368.cpp
        oj/leetcode/2401-2500/2441/2441.cpp
        oj/leetcode/801-900/857/857.cpp
        oj/leetcode/1501-1600/1514/1514.cpp
        oj/leetcode/101-200/165/165_1.cpp
        oj/leetcode/1401-1500/1491/1491.cpp
        oj/leetcode/101-200/165/165_2.cpp
        oj/leetcode/1701-1800/1786/1786.cpp
        oj/leetcode/801-900/881/881.cpp
        oj/leetcode/1201-1300/1235/1235.cpp
        oj/leetcode/1901-2000/1976/1976_1.cpp
        oj/leetcode/1901-2000/1976/1976_2.cpp
)